lib/tests/fixtures/compiler/evaluation/invalid_radix_type.pp
notice Integer('2', '6')
